[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_theme.tres" type="Theme" id=1]
[ext_resource path="res://served_games/served_games.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.490196, 0.0117647, 0, 1 )

[node name="served_games" type="Node"]
script = ExtResource( 2 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="ui/HBoxContainer"]
margin_left = 362.0
margin_right = 662.0
margin_bottom = 600.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ui/HBoxContainer/PanelContainer"]
margin_right = 300.0
margin_bottom = 600.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ui/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 596.0
custom_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 24.0

[node name="create_game_button" type="Button" parent="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 292.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Create Game"

[node name="ScrollContainer" type="ScrollContainer" parent="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 292.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="game_infos_container" type="VBoxContainer" parent="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 292.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 568.0
margin_right = 292.0
margin_bottom = 592.0

[node name="exit_button" type="Button" parent="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 292.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Exit"
[connection signal="pressed" from="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/create_game_button" to="." method="_on_create_game_button_pressed"]
[connection signal="pressed" from="ui/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/exit_button" to="." method="_on_exit_button_pressed"]
